K8S/02-mssql-platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-svc
  template:
    metadata:
      labels:
        app: mssql-svc
    spec:
      containers:
        - name: mssql-svc
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data #linux mssql data path
              name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-claim #05-local-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: mssql-svc
  ports:
    - name: mssql-port
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer # useful for access into mssql service directly
spec:
  type: ClusterIP
  selector:
    app: mssql-svc
  ports:
  - protocol: TCP
    port: 1433
    targetPort: 1433
