K8S/03-platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: platform-svc
  template:
    metadata:
      labels:
        app: platform-svc
    spec:
      containers:
        - name: platform-svc
          image: lhuck/platform-service:latest
          #ports:
            #- containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: platform-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: platform-svc
  ports:
    - name: platform-svc-port
      protocol: TCP
      port: 80
      targetPort: 80
    - name: platform-grpc-port
      protocol: TCP
      port: 666
      target: 666
