K8S/04-command-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: command-deploy
spec:
  selector:
    matchLabels:
      app: command-svc
  replicas: 1
  template:
    metadata:
      labels:
        app: command-svc
    spec:
      containers:
        - name: command-svc
          image: lhuck/command-service:latest
          #ports:
            #- containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: command-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: command-svc
  ports:
    - name: command-svc-port
      protocol: TCP
      port: 80
      targetPort: 80
    - name: command-grpc-port
      protocol: TCP
      port: 666
      target: 666
