K8S/05-platform-nodeport-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-np-srv
spec:
  type: NodePort
  selector:
    app: platform-service
  ports:
    - name: platform-service
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
