K8S/06-mssql-platform-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql-service
  template:
    metadata:
      labels:
        app: mssql-service
    spec:
      containers:
        - name: mssql-service
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
          - mountPath: /var/opt/mssql/data #linux mssql data path
            name: mssqldb
      volumes:
      - name: mssqldb
        persistentVolumeClaim:
          claimName: mssql-claim #05-local-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: mssql-service
  ports:
    - name: mssql-service
      protocol: TCP
      port: 1433
      targetPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer # useful for access into mssql service directly
spec:
  type: ClusterIP
  selector:
    app: mssql-service
  ports:
    - name: mssql-service
      protocol: TCP
      port: 1433
      targetPort: 1433
