K8S/07-rabbitmq-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq-svc
  template:
    metadata:
      labels:
        app: rabbitmq-svc
    spec:
      containers:
        - name: rabbitmq-svc
          image: rabbitmq:3-management
          ports:
            - containerPort: 15672
              name: rbmq-mgnt-port
            - containerPort: 5672
              name: rbmq-msg-port
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-svc
spec:
  type: ClusterIP
  selector:
    app: rabbitmq-svc
  ports:
    - name: rbmq-mgnt-port
      protocol: TCP
      port: 15672
      targetPort: 15672
    - name: rbmq-msg-port
      protocol: TCP
      port: 5672
      targetPort: 5672
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer # useful for access into rabbitmq service directly
spec:
  type: ClusterIP
  selector:
    app: rabbitmq-svc
  ports:
  - name: rbmq-mgnt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rbmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
