K8S/ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: mycode.com
      http:
        paths:
          - path: /api/p/platform
            pathType: Prefix
            backend:
              service:
                name: platform-clusterip-svc
                port:
                  number: 80
          - path: /api/c/platform
            pathType: Prefix
            backend:
              service:
                name: command-clusterip-svc
                port:
                  number: 80
